# scrollstats

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AAA_BendIntroductionPlot.ipynb  AAA_MigrationRate.ipynb  AAA_MultiscaleMetrics.ipynb  AAA_PrimaryDataProducts.ipynb  AAA_RidgeMetricSineWave.ipynb  AAA_SubtringSampling.ipynb  AAA_table1.ipynb  ARCHITECTURE.md  AddDataToSQL.ipynb  BrazosBendsMultiScale.ipynb  CalculateRidgeMetrics.ipynb  ClassifyRasters.ipynb  CompleteBendProcess.ipynb  CreateVectorData.ipynb  CreateVectorDatasets.ipynb  CreatingVectorData.ipynb  DelineateRidgeAreas.ipynb  ExcessiveRidgeAmps.ipynb  Figure_BrazosBendsMultiScale.ipynb  Figure_InterPacketVariation.ipynb  Figure_MigrationRate.ipynb  Figure_RasterAgreement.ipynb  Figure_RidgeMetricSineWave.ipynb  Figure_StrickComparison.ipynb  GrassResources.py  LICENSE  MigrationRateFigure.ipynb  README.md  RidgeMetricDevelopment.ipynb  TestAllBends.py  TransectingDevelopment.ipynb  TransformRasters.ipynb  UpdateGeometries.ipynb  data_ingest.ipynb  environment.yml  environment2.yml  example_config.py  (+10 more)
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  draft-pdf.yml  main.yml  test.yml
docs/: CalculateRidgeMetrics.md  CompleteScrollStatsWorkflow.md  CreateVectorDatasets.md  DelineateRidgeAreas.md  conf.py  index.md
example_data/: LBR_025_bend.geojson  LBR_025_cl.geojson  LBR_025_ridges_manual.geojson  bend25_manual.dbf  bend25_manual.shp  bend25_manual.shx
example_data/input/: LBR_025_bend.geojson  LBR_025_cl.geojson  LBR_025_packets.geojson  LBR_025_ridges_manual.geojson  LBR_025_ridges_manual_smoothed.geojson  LBR_029_bend.geojson  LBR_029_cl.geojson  LBR_029_packets.geojson  LBR_029_ridges.geojson
example_data/output/: LBR_025_ridges_manual_smoothed.geojson  LBR_025_transects.geojson
img/: README.md
paper/: paper.bib  paper.md
scripts/: calc_ridge_metrics.py  create_vector_data.py  delineate_ridge_area_raster.py
scripts/plots/: calc_ridge_metrics.py  create_vector_datasets.py  delineate_ridge_areas.py
scrollstats/: __init__.py  example_config.py
scrollstats/delineation/: __init__.py  classifyRasters.py  clipSingleRaster.py  createAgreementRaster.py  curvature.py  denoiseRasters.py  geomorphic_parameters.py  line_smoother.py  profileCurvature_QGIS.py  profile_curvature.py  raster_classification.py  raster_classifiers.py  raster_denoisers.py  raster_transformation.py  resTopo.py  residual_topography.py  ridge_area_raster.py  strick_float_to_int.py
scrollstats/ridge_metrics/: RelativeMigrationRates.py  __init__.py  calc_ridge_metrics.py  createTransectMetrics.py  data_extractors.py  migration_rates.py  ridgeAmplitudes.py
scrollstats/transecting/: __init__.py  transect.py
scrollstats/transects/: h74_transect.py
scrollstats/utils/: __init__.py  geom_utils.py  sql_utils.py
src/scrollstats/: __init__.py
src/scrollstats/delineation/: __init__.py  array_types.py  line_smoother.py  raster_classifiers.py  raster_denoisers.py  ridge_area_raster.py
src/scrollstats/ridge_metrics/: __init__.py  calc_ridge_metrics.py  data_extractors.py  ridgeAmplitudes.py  ridge_amplitude.py
src/scrollstats/transecting/: __init__.py  transect.py
tests/: test_core.py  test_package.py
