[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "scrollstats"
authors = [
  { name = "Andrew Vanderheiden", email = "andrewloyd19@gmail.com" },
]
description = "An open-source python library to calculate and extract morphometrics from scroll bar floodplains"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "geopandas",
  "matplotlib",
  "scipy",
  "rasterio",
  "numba",
  "tqdm",
  "nptyping",
  ]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
  "nox",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
  "nbsphinx",
  "ipykernel",
]

[project.urls]
Homepage = "https://github.com/tamu-edu/scrollstats"
"Bug Tracker" = "https://github.com/tamu-edu/scrollstats/issues"
Discussions = "https://github.com/tamu-edu/scrollstats/discussions"
Changelog = "https://github.com/tamu-edu/scrollstats/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/scrollstats/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.uv]
dev-dependencies = [
  "scrollstats[test]",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::rasterio.errors.NotGeoreferencedWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["scrollstats"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
  "scrollstats.*",
  "geopandas.*",
  "pandas.*",
  "numpy.*",
  "nptyping.*",
  "shapely.geometry.*",
  "tqdm.*",
  "scipy.*",
  "matplotlib.*",
  "rasterio.*",
  "numba.*",
  ]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true  # see https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "PD901",    # Generic `df` variable name
  "RET504",   # unncesarry assignment
  "T201",     # Print statements
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["scrollstats._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"*.ipynb" = ["T201"]


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "too-many-lines",
]

[tool.codespell]
skip = "*.ipynb" # notebook output cells have text fragments and images
ignore-words-list = "FLUD" # lab acronym
